tests/baselines/reference/structExtendingPrimitive.errors.txt
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(7,20): error TS1003: Identifier expected.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(9,20): error TS1003: Identifier expected.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(9,25): error TS1005: ';' expected.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(3,18): error TS2304: Cannot find name 'number'.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(4,19): error TS2304: Cannot find name 'string'.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(5,19): error TS2304: Cannot find name 'boolean'.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(6,19): error TS2304: Cannot find name 'Void'.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(8,19): error TS2304: Cannot find name 'Null'.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(10,19): error TS2304: Cannot find name 'undefined'.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(11,19): error TS2304: Cannot find name 'Undefined'.
tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts(14,19): error TS8003: A struct may only extend another struct.


==== tests/cases/conformance/structs/structDeclarations/structHeritageSpecification/structExtendingPrimitive.ts (11 errors) ====
    // structes cannot extend primitives
    
    struct C extends number { }
                     ~~~~~~
!!! error TS2304: Cannot find name 'number'.
    struct C2 extends string { }
                      ~~~~~~
!!! error TS2304: Cannot find name 'string'.
    struct C3 extends boolean { }
                      ~~~~~~~
!!! error TS2304: Cannot find name 'boolean'.
    struct C4 extends Void  { }
                      ~~~~
!!! error TS2304: Cannot find name 'Void'.
    struct C4a extends void {}
                       ~~~~
!!! error TS1003: Identifier expected.
    struct C5 extends Null { }
                      ~~~~
!!! error TS2304: Cannot find name 'Null'.
    struct C5a extends null { }
                       ~~~~
!!! error TS1003: Identifier expected.
                            ~
!!! error TS1005: ';' expected.
    struct C6 extends undefined { }
                      ~~~~~~~~~
!!! error TS2304: Cannot find name 'undefined'.
    struct C7 extends Undefined { }
                      ~~~~~~~~~
!!! error TS2304: Cannot find name 'Undefined'.
    
    enum E { A }
    struct C8 extends E { }
                      ~
!!! error TS8003: A struct may only extend another struct.